# msf_localization

./: .gitignore  README.md
documentation/: MsfLocalization.mdj
msf_localization/: CMakeLists.txt  package.xml
msf_localization_core/: CMakeLists.txt  package.xml
msf_localization_core/src/include/: free_model_robot_core.h  free_model_robot_state_core.h  imu_sensor_core.h  imu_sensor_measurement_core.h  imu_sensor_state_core.h  msfLocalization.h  msf_storage_core.h  ring_buffer.h  robot_core.h  robot_state_core.h  sensor_basics.h  sensor_core.h  sensor_measurement_core.h  sensor_state_core.h  stamped_ring_buffer.h  state_estimation_core.h  time_stamp.h
msf_localization_core/src/include/msf_localization_core/: absolute_pose_driven_robot_core.h  absolute_pose_driven_robot_state_core.h  absolute_pose_input_command_core.h  absolute_pose_input_core.h  absolute_pose_input_state_core.h  absolute_pose_sensor_core.h  absolute_pose_sensor_measurement_core.h  absolute_pose_sensor_state_core.h  block_matrix.h  coded_visual_marker_eye_core.h  coded_visual_marker_eye_state_core.h  coded_visual_marker_landmark_core.h  coded_visual_marker_landmark_state_core.h  coded_visual_marker_measurement_core.h  free_model_robot_core.h  free_model_robot_state_core.h  global_parameters_core.h  global_parameters_state_core.h  imu_driven_robot_core.h  imu_driven_robot_state_core.h  imu_input_command_core.h  imu_input_core.h  imu_input_state_core.h  imu_sensor_core.h  imu_sensor_measurement_core.h  imu_sensor_state_core.h  input_command_component.h  input_command_core.h  input_core.h  input_state_core.h  map_element_core.h  map_element_state_core.h  mocap_sensor_core.h  mocap_sensor_measurement_core.h  mocap_sensor_state_core.h  mocap_world_core.h  mocap_world_state_core.h  msfLocalization.h  msf_element_core.h  msf_storage_core.h  (+22 more)
msf_localization_core/src/source/: absolute_pose_driven_robot_core.cpp  absolute_pose_driven_robot_state_core.cpp  absolute_pose_input_command_core.cpp  absolute_pose_input_core.cpp  absolute_pose_input_state_core.cpp  absolute_pose_sensor_core.cpp  absolute_pose_sensor_measurement_core.cpp  absolute_pose_sensor_state_core.cpp  block_matrix.cpp  coded_visual_marker_eye_core.cpp  coded_visual_marker_eye_state_core.cpp  coded_visual_marker_landmark_core.cpp  coded_visual_marker_landmark_state_core.cpp  coded_visual_marker_measurement_core.cpp  free_model_robot_core.cpp  free_model_robot_state_core.cpp  global_parameters_core.cpp  global_parameters_state_core.cpp  imu_driven_robot_core.cpp  imu_driven_robot_state_core.cpp  imu_input_command_core.cpp  imu_input_core.cpp  imu_input_state_core.cpp  imu_sensor_core.cpp  imu_sensor_measurement_core.cpp  imu_sensor_state_core.cpp  input_command_component.cpp  input_command_core.cpp  input_core.cpp  input_state_core.cpp  map_element_core.cpp  map_element_state_core.cpp  mocap_sensor_core.cpp  mocap_sensor_measurement_core.cpp  mocap_sensor_state_core.cpp  mocap_world_core.cpp  mocap_world_state_core.cpp  msfLocalization.cpp  msf_element_core.cpp  msf_storage_core.cpp  (+20 more)
msf_localization_ros/: CMakeLists.txt  package.xml
msf_localization_ros/configs/: msf_localization_config_file.xml
msf_localization_ros/launch/: msf_localization_ros.launch
msf_localization_ros/src/include/: droneMsfLocalizationROSModule.h  ros_sensor_imu_interface.h  ros_sensor_interface.h
msf_localization_ros/src/include/msf_localization_ros/: droneMsfLocalizationROSModule.h  ros_absolute_pose_driven_robot_interface.h  ros_absolute_pose_input_interface.h  ros_absolute_pose_sensor_interface.h  ros_aruco_eye_interface.h  ros_free_model_robot_interface.h  ros_imu_driven_robot_interface.h  ros_imu_input_interface.h  ros_imu_sensor_interface.h  ros_input_interface.h  ros_interface.h  ros_mocap_sensor_interface.h  ros_px4flow_sensor_interface.h  ros_robot_interface.h  ros_sensor_imu_interface.h  ros_sensor_interface.h
msf_localization_ros/src/source/: droneMsfLocalizationROSModule.cpp  droneMsfLocalizationROSModuleNode.cpp  ros_absolute_pose_driven_robot_interface.cpp  ros_absolute_pose_input_interface.cpp  ros_absolute_pose_sensor_interface.cpp  ros_aruco_eye_interface.cpp  ros_free_model_robot_interface.cpp  ros_imu_driven_robot_interface.cpp  ros_imu_input_interface.cpp  ros_imu_sensor_interface.cpp  ros_input_interface.cpp  ros_interface.cpp  ros_mocap_sensor_interface.cpp  ros_px4flow_sensor_interface.cpp  ros_robot_interface.cpp  ros_sensor_imu_interface.cpp  ros_sensor_interface.cpp  test.cpp
msf_localization_ros_srvs/: CMakeLists.txt  package.xml
msf_localization_ros_srvs/srv/: GetPoseWithCovarianceByStamp.srv
