<?xml version="1.0"?>
<package format="2">
	<name>msf_localization_core</name>
	<version>1.0.0</version>
	<description>
    		This package is msf_localization_core.
	</description>
	<author email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</author>
	<maintainer email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</maintainer>
  	<license>BSD</license>
	<url>http://ros.org/wiki/msf_localization_core</url>

  	<buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>cmake_modules</build_depend>

    <depend>eigen</depend>
    <depend>boost</depend>

    <depend>pugixml</depend>
  
</package>


