<?xml version="1.0"?>
<package format="2">
	<name>msf_localization_ros</name>
	<version>1.0.0</version>
	<description>
  		This package is msf_localization_ros.
	</description>
	<author email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</author>
	<maintainer email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</maintainer>
  	<license>BSD</license>
	<url>http://ros.org/wiki/msf_localization_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>

  <depend>eigen</depend>
  <depend>boost</depend>

  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>pugixml</depend>
	<depend>msf_localization_core</depend>
	<depend>msf_localization_ros_srvs</depend>

  <depend>aruco_eye_msgs</depend>


</package>

