<?xml version="1.0"?>
<package format="2">
	<name>msf_localization_ros_srvs</name>
	<version>1.0.0</version>
	<description>
  		This package is msf_localization_ros_srvs.
	</description>
	<author email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</author>
	<maintainer email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</maintainer>
  	<license>BSD</license>
	<url>http://ros.org/wiki/msf_localization_ros_srvs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>

